# OceanScript

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE.oceanscript  README.md  make.bat  make.ps1  oceanscript.js  oceanscript.py  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: run_precommit.yaml
JS/: README.md  index.js  oceanscript.js
docs/: Makefile  make.bat
docs/source/: api_encoding.rst  conf.py  decoding.rst  encoding.rst  glossary.rst  index.rst  tables.csv
docs/source/_static/: code_highlight.css  style.css  tables.css
docs/source/_templates/: layout.html
docs/source/api/: automodule.rst  decoding.rst  encoding.rst  error_handling.rst
docs/source/tables/: all.csv  t1.csv  t2.csv  t3.csv  t4.csv
docs/src/: conf.py  index.rst  python_implementation.rst
site/: README.md  encoder.js  index.html  main.js
site/styles/: style.css
site/styles/modes/: console.css  dark.css  earthly.css  fuego.css  light.css
tests/: test_decoder.py  test_encoder.py  test_splitwaves.py
