[metadata]
name = oceanscript
version = attr: oceanscript.__version__
author = Kreusada
author_email = kreusadaprojects@gmail.com
description = OceanScript is an Esoteric language used to encode and decode text into a formulation of characters - where the final result looks like waves in the ocean.
url = https://github.com/Kreusada/OceanScript
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
license_files =
    LICENSE

[options]
py_modules =
    oceanscript
